--- a/template.ipynb
+++ b/template.ipynb
@@ -94,33 +94,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[31mERROR: witwidget 1.5.1 has requirement oauth2client>=4.1.3, but you'll have oauth2client 3.0.0 which is incompatible.\u001b[0m\n",
       "\u001b[31mERROR: google-cloud-storage 1.26.0 has requirement google-resumable-media<0.6dev,>=0.5.0, but you'll have google-resumable-media 0.4.1 which is incompatible.\u001b[0m\n",
-      "\u001b[31mERROR: google-api-python-client 1.7.12 has requirement httplib2<1dev,>=0.17.0, but you'll have httplib2 0.12.0 which is incompatible.\u001b[0m\n",
-      "\u001b[31mERROR: tensorflow-data-validation 0.21.5 has requirement pandas<1,>=0.24, but you'll have pandas 1.0.2 which is incompatible.\u001b[0m\n",
-      "\u001b[33m  WARNING: The script pbr is installed in '/home/jupyter/.local/bin' which is not on PATH.\n",
-      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\u001b[0m\n",
-      "\u001b[33m  WARNING: The scripts hdfscli and hdfscli-avro are installed in '/home/jupyter/.local/bin' which is not on PATH.\n",
-      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\u001b[0m\n",
-      "\u001b[33m  WARNING: The script plasma_store is installed in '/home/jupyter/.local/bin' which is not on PATH.\n",
-      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\u001b[0m\n",
-      "\u001b[33m  WARNING: The script fastavro is installed in '/home/jupyter/.local/bin' which is not on PATH.\n",
-      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\u001b[0m\n",
-      "\u001b[33m  WARNING: The script gen_client is installed in '/home/jupyter/.local/bin' which is not on PATH.\n",
-      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\u001b[0m\n",
-      "\u001b[33m  WARNING: The script tfx is installed in '/home/jupyter/.local/bin' which is not on PATH.\n",
-      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\u001b[0m\n",
       "\u001b[31mERROR: google-cloud-bigquery 1.17.1 has requirement google-resumable-media<0.5.0dev,>=0.3.1, but you'll have google-resumable-media 0.5.0 which is incompatible.\u001b[0m\n",
-      "\u001b[31mERROR: tensorflow-probability 0.9.0 has requirement cloudpickle>=1.2.2, but you'll have cloudpickle 1.1.1 which is incompatible.\u001b[0m\n",
-      "\u001b[33m  WARNING: The script tabulate is installed in '/home/jupyter/.local/bin' which is not on PATH.\n",
-      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\u001b[0m\n",
-      "\u001b[33m  WARNING: The script strip-hints is installed in '/home/jupyter/.local/bin' which is not on PATH.\n",
-      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\u001b[0m\n",
-      "\u001b[33m  WARNING: The scripts dsl-compile and kfp are installed in '/home/jupyter/.local/bin' which is not on PATH.\n",
-      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\u001b[0m\n",
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 36.6M  100 36.6M    0     0   120M      0 --:--:-- --:--:-- --:--:--  120M\n"
+      "100 36.6M  100 36.6M    0     0  58.6M      0 --:--:-- --:--:-- --:--:-- 58.5M\n"
      ]
     }
    ],
@@ -303,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -330,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -357,7 +335,35 @@
       "data_validation.ipynb -> /home/jupyter/AIHub/my_pipeline/data_validation.ipynb\n",
       "configs.py -> /home/jupyter/AIHub/my_pipeline/configs.py\n",
       "preprocessing.py -> /home/jupyter/AIHub/my_pipeline/preprocessing.py\n",
-      "model.py -> /home/jupyter/AIHub/my_pipeline/model.py\n"
+      "model.py -> /home/jupyter/AIHub/my_pipeline/model.py\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/jupyter/.local/bin/tfx\", line 8, in <module>\n",
+      "    sys.exit(cli_group())\n",
+      "  File \"/home/jupyter/.local/lib/python3.7/site-packages/click/core.py\", line 764, in __call__\n",
+      "    return self.main(*args, **kwargs)\n",
+      "  File \"/home/jupyter/.local/lib/python3.7/site-packages/click/core.py\", line 717, in main\n",
+      "    rv = self.invoke(ctx)\n",
+      "  File \"/home/jupyter/.local/lib/python3.7/site-packages/click/core.py\", line 1137, in invoke\n",
+      "    return _process_result(sub_ctx.command.invoke(sub_ctx))\n",
+      "  File \"/home/jupyter/.local/lib/python3.7/site-packages/click/core.py\", line 1137, in invoke\n",
+      "    return _process_result(sub_ctx.command.invoke(sub_ctx))\n",
+      "  File \"/home/jupyter/.local/lib/python3.7/site-packages/click/core.py\", line 956, in invoke\n",
+      "    return ctx.invoke(self.callback, **ctx.params)\n",
+      "  File \"/home/jupyter/.local/lib/python3.7/site-packages/click/core.py\", line 555, in invoke\n",
+      "    return callback(*args, **kwargs)\n",
+      "  File \"/home/jupyter/.local/lib/python3.7/site-packages/click/decorators.py\", line 64, in new_func\n",
+      "    return ctx.invoke(f, obj, *args, **kwargs)\n",
+      "  File \"/home/jupyter/.local/lib/python3.7/site-packages/click/core.py\", line 555, in invoke\n",
+      "    return callback(*args, **kwargs)\n",
+      "  File \"/home/jupyter/.local/lib/python3.7/site-packages/tfx/tools/cli/commands/template.py\", line 68, in copy\n",
+      "    template_handler.copy_template(ctx.flags_dict)\n",
+      "  File \"/home/jupyter/.local/lib/python3.7/site-packages/tfx/tools/cli/handler/template_handler.py\", line 164, in copy_template\n",
+      "    io_utils.copy_file(src_path, dst_path)\n",
+      "  File \"/home/jupyter/.local/lib/python3.7/site-packages/tfx/utils/io_utils.py\", line 55, in copy_file\n",
+      "    tf.io.gfile.copy(src, dst, overwrite=overwrite)\n",
+      "  File \"/opt/conda/lib/python3.7/site-packages/tensorflow_core/python/lib/io/file_io.py\", line 488, in copy_v2\n",
+      "    compat.as_bytes(src), compat.as_bytes(dst), overwrite)\n",
+      "tensorflow.python.framework.errors_impl.AlreadyExistsError: file already exists\n"
      ]
     }
    ],
